<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_dark"
    tools:context="br.pe.recife.tafeito.gui.ClientePrincipalActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/tvClientDashboard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cliente"
            android:textSize="40sp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="130dp">

        <FrameLayout
            android:id="@+id/frameLayoutUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical">

                <View
                    android:id="@+id/vConfig"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:background="@drawable/rounded_buttons" />

                <View
                    android:id="@+id/vSchedule"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginStart="20dp"
                    android:background="@drawable/rounded_buttons" />
            </LinearLayout>

        </FrameLayout>

        <FrameLayout
            android:id="@+id/frameLayoutDown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <View
                    android:id="@+id/vOffer"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginTop="180dp"
                    android:background="@drawable/rounded_buttons" />

                <View
                    android:id="@+id/vQuit"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="180dp"
                    android:background="@drawable/rounded_buttons" />
            </LinearLayout>

        </FrameLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvConfig"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="100dp"
                android:text="@string/configura_es"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvOffer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="160dp"
                android:text="@string/ofertas"
                android:textColor="@android:color/white"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="340dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgvSettings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="50dp"
                android:src="@drawable/ic_settings_applications_white_48dp" />

            <ImageView
                android:id="@+id/imgvOffer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="90dp"
                android:src="@drawable/ic_favorite_white_48dp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginStart="170dp"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/imgvSchedule"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="50dp"
                android:src="@drawable/ic_date_range_white_48dp" />


            <ImageView
                android:id="@+id/imgvExit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="90dp"
                android:src="@drawable/ic_exit_to_app_white_48dp" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="185dp"
            android:layout_marginStart="175dp"
            android:orientation="vertical">


            <TextView
                android:id="@+id/tvSchedule"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="100dp"
                android:text="@string/agendamentos"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvExit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="160dp"
                android:text="@string/sair"
                android:textColor="@android:color/white"
                android:textSize="20sp" />


        </LinearLayout>


    </RelativeLayout>


</android.support.constraint.ConstraintLayout>
